# medical-digital-twin-mirofish-reversa

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_MANIFEST.json  QA_REPORT.md  README.md  SECURITY.md  SHA256SUMS.txt  THIRD_PARTY_NOTICES.md  opencode.json  pyproject.toml
.github/workflows/: ci.yml
.opencode/agents/: medical-twin.md
.opencode/commands/: medical-twin-council.md  medical-twin-gemma.md  medical-twin-mirofish.md  medical-twin-validate.md  medical-twin.md
.opencode/skills/medical-digital-twin/: SKILL.md
.opencode/tools/: medical_twin.ts  medical_twin_runner.py
docs/: ARCHITECTURE.md  LITERT_LM_GEMMA4.md  MIROFISH_INTEGRATION.md  OPENCODE_CLI.md  PUBLISHING.md  REPRODUCIBILITY.md  SAFETY.md  SPEC-001.md  SPEC-002-MULTIMODAL-SPECIALIST-COUNCIL.md
examples/: synthetic_case.json  synthetic_council_case.json
schemas/: digital_twin_result.schema.json  simulation_case.schema.json  specialist_council_result.schema.json
scripts/: bootstrap_mirofish.sh  litert_lm_openai_bridge.py  mirofish_bridge_example.py
src/opencode_medical_digital_twin_mirofish_reversa/: __init__.py  cli.py  council.py  engine.py  model_fabric.py  models.py  opencode_bridge.py  reversa.py  specialists.py
src/opencode_medical_digital_twin_mirofish_reversa/adapters/: __init__.py  base.py  deterministic.py  mirofish_external.py
tests/: test_engine.py  test_external_adapter.py  test_litert_bridge_script.py  test_opencode_bridge.py  test_opencode_council_bridge.py  test_opencode_scaffold.py  test_specialist_council.py
